--- a/ecard_app/pubspec.yaml
+++ b/ecard_app/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_vector_icons: ^2.0.0
   font_awesome_flutter: ^10.8.0
   loading_animation_widget: ^1.3.0
+  camera: ^0.11.1
+  skeletonizer: ^1.4.3
 #  flutter_colorpicker: ^1.1.0
 #  flutter_otp_text_field: ^1.4.0+2
 #  permission_handler: ^11.3.1
